# MONIR

./: .gitignore  Impact_analysis.py  Impact_score_calculation.py  KEGG_network_construction.py  LICENSE  MONIR.py  MONIT.py  Network_construction.py  README.md  Subnetwork_selector_for_visualisation.py  Subnetwork_visualisation.py  TEST_TEMP.py  parsers.py  pyproject.toml
Tests/: TEST_CLI.py  TEST_METHODS.py  TEST_PYTHON_MANUALLY.py
Tests/Test_input/: MONIR_NOI_T05.tsv
Tests/Test_output/: MONIR_IMPACT_ANALYSIS_T05.tsv  MONIR_IMPACT_ANALYSIS_T05_subnetwork.tsv_PA1179.tsv  MONIR_IMPACT_ANALYSIS_T05_subnetwork.tsv_PA1180.tsv  MONIR_IMPACT_ANALYSIS_T05_subnetwork.tsv_PA3159.tsv  MONIR_IMPACT_ANALYSIS_T05_subnetwork.tsv_PA3874.tsv  MONIR_IMPACT_ANALYSIS_T05_subnetwork.tsv_PA3875.tsv  MONIR_IMPACT_ANALYSIS_T05_subnetwork.tsv_PA3878.tsv  MONIR_IMPACT_ANALYSIS_T05_subnetwork.tsv_PA3879.tsv  MONIR_IMPACT_ANALYSIS_T05_subnetwork.tsv_PA4054.tsv  MONIR_IMPACT_ANALYSIS_T05_subnetwork.tsv_PA5452.tsv  MONIR_annotation_table_extended.tsv  glycolysis_and_TCA_doubled.txt  merged_glycolysis_and_glycolysis_and_TCA.txt  pae_reaction_GErel_PPrel_PCrel_all_pathways.tsv  pae_reaction_GErel_PPrel_PCrel_all_pathways_node_table_extension.tsv  reaction_TCA.txt  reaction_glycolysis.txt
monir/: MONIR.py  Parsers.py  Subnetwork_visualisation.py
monir/Tests/: TEST_CLI.py  TEST_METHODS.py
monir/Tests/Test_input/: MONIR_OMICS_T05.tsv
monir/Tests/Test_output/: MONIR_IMPACT_ANALYSIS_T05.tsv  MONIR_IMPACT_ANALYSIS_T05_subnetwork.tsv_PA1179.tsv  MONIR_IMPACT_ANALYSIS_T05_subnetwork.tsv_PA3159.tsv  MONIR_IMPACT_ANALYSIS_T05_subnetwork.tsv_PA3878.tsv  MONIR_IMPACT_ANALYSIS_T05_subnetwork.tsv_PA4494.tsv  MONIR_IMPACT_ANALYSIS_T05_subnetwork.tsv_PA5452.tsv  merged_glycolysis_and_glycolysis_and_TCA.txt  reaction_TCA.txt  reaction_glycolysis_doubled.txt
